update on older_post component

--- a/src/components/older_posts/index.css
+++ b/src/components/older_posts/index.css
@@ -16,7 +16,7 @@
 
 .older-posts-grid-wrapper .article-data-container {
     position: static;
-    background-color: transparent;
+    background: transparent;
 }
 
 .older-posts-grid-wrapper .article-title {
