--- a/src/index.css
+++ b/src/index.css
@@ -105,3 +105,20 @@ input, button {
   color: var(--light-color);
 }
 
+/* Scrollbar styles */
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3f4254;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #2e303b;
+} 
