--- a/src/components/featured_articles/index.css
+++ b/src/components/featured_articles/index.css
@@ -77,7 +77,7 @@
     right: 1rem;
     padding: 1rem;
     font-size: 1rem;
-    background-color: var(--secondary-background-color);
+    background-color: var(--primary-background-color);
     text-transform: uppercase;
     z-index: 10;
 }
@@ -99,6 +99,10 @@
 
 .article:hover .article-data-spacer {
     background-color: var(--hover-light-color);
+}
+
+.article:hover .article-title {
+    color: var(--hover-light-color);
 }
 
 .article-data { 
