--- a/src/components/older_posts/index.css
+++ b/src/components/older_posts/index.css
@@ -2,7 +2,7 @@
     gap: var(--gap);
 }
 
-.article-image-wrapper, .article {
+.article-image-wrapper, .older-posts .article {
     min-height: var(--item-min-height-sm);
 }
 
@@ -21,4 +21,20 @@
 
 .older-posts-grid-wrapper .article-title {
     margin-bottom: var(--margin-sm);
+}
+
+.see-more-container {
+    margin-top: var(--margin-md);
+}
+
+.see-more-btn {
+    text-transform: uppercase;
+}
+
+.see-more-btn:hover i {
+    transform: translateX(.5rem);
+}
+
+.see-more-btn i {
+    transition: transform .25s;
 }
