--- a/src/components/quick_read/QuickRead.css
+++ b/src/components/quick_read/QuickRead.css
@@ -15,11 +15,26 @@
 }
 
 .myswiper {
-    width: 100%;
+    /* width: 100%;
+    height: 40rem; */
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    list-style: none;
+    padding: 0px;
+}
+
+.article.swiper-slide {
     height: 40rem;
 }
 
-.swiperslide {
+.swiper-wrapper {
+    height: auto;
+}
+
+.swiper-slide {
     width: 100%;
     height: 100%;
     object-fit: cover;
