--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,171 @@ input, button {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #2e303b;
 } 
+
+/* Media queries */
+
+@media screen and (min-width: 700px) {
+  .trending-news-box {
+    flex-direction: row !important;
+    align-items: center;
+  }
+
+  .trending-news-image-box {
+    width: 50% !important;
+  }
+
+  .trending-news-data {
+    margin: auto;
+    text-align: center;
+  }
+
+  .newsletter-description {
+    max-width: 40rem;
+  }
+
+  .form-container-inner {
+   align-items: center;
+  }
+
+  .popular-tags-container, .footer-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .company-data {
+    order: 0 !important;
+}
+  
+}
+
+
+@media screen and (min-width: 768px) {
+  .featured-content {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 5rem repeat(4, 1fr);
+  }
+
+  .headline-banner {
+    grid-column: 1/-1;
+    font-size: var(--font-size-sm);
+  }
+
+  /* .featured-article {
+    grid-column: 3/-1;
+    grid-row: 2/4;
+  }
+
+  .featured-article-1 {
+    grid-column: 1/3;
+  }
+
+  .featured-article-3 {
+    grid-column: 1/-1;
+    grid-row: 4/6;
+  } */
+
+  .featured-article-1 {
+    grid-column: 1/-3;
+    grid-row: 2/-3;
+  }
+
+  .featured-article-2 {
+    grid-column: 3/-1;
+    grid-row: 2/-3;
+  }
+
+  .featured-article-3 {
+    grid-column: 1/-1;
+    grid-row: 4/-1;
+  }
+  
+  .older-posts .article {
+    grid-template-columns: 25rem 1fr;
+  }
+
+  .older-posts-grid-wrapper {
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .menu  {
+    position: initial !important;
+    padding: initial !important;
+    margin: initial !important;
+    background-color: transparent !important;
+    opacity: initial !important;
+    transform: initial !important;
+  }
+
+  .menu > .list {
+    flex-direction: row !important;
+  }
+
+  .screen-sm-hidden {
+    display: block;
+  }
+
+  .screen-lg-hidden {
+    display: none;
+  }
+
+  .sign-up-btn {
+    padding: .4rem;
+  }
+
+  .btn.fancy-border:hover::before {
+    animation: animate_border .75s linear infinite;
+  }
+
+  @keyframes animate_border {
+    to {
+      transform: translateX(-50%);
+    }
+  }
+
+  .featured-articles-container {
+    grid-template-columns: 1fr 40rem;
+  }
+
+  .trending-news-image-box {
+    width: 10rem !important;
+    height: 10rem !important;
+  }
+
+  .popular-tags-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .footer-container {
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .company-data {
+    grid-column: span 2;
+  }
+
+  .company-description {
+    max-width: 95% !important;
+  }
+
+  .copyright {
+    margin-top: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .older-posts-grid-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .featured-article {
+      grid-column: 3/-1;
+  }
+
+  .featured-article-1 {
+      grid-column: 1/3;
+      grid-row: 2/-1;
+  }
+}
